# endian.hpp

./: CMakeLists.txt  README.md
example/: network.cpp
examples/: CMakeLists.txt  network.cpp
include/: endian.hpp  endian_compilersupport.hpp
test/: CMakeLists.txt  basic_convert_16.cpp  basic_convert_32.cpp  basic_convert_64.cpp  basic_endian_int_16.cpp  basic_endian_int_32.cpp  basic_endian_int_64.cpp  network_example.cpp
tests/: CMakeLists.txt  network_example.cpp
