file(GLOB test_sources *.cpp)
foreach(file IN LISTS test_sources)
    get_filename_component(name ${file} NAME_WE)
    add_executable(test_${name}_bin ${file})
    set_target_properties(test_${name}_bin PROPERTIES OUTPUT_NAME ${name})
    target_compile_options(test_${name}_bin PRIVATE -UNDEBUG)
    target_link_libraries(test_${name}_bin PRIVATE libendian)
    add_test(NAME test_${name} COMMAND test_${name}_bin)
endforeach()
